RESOLVED FIXED75675
WebKit1 fails to compile with USE(CFNETWORK) and HAVE(NETWORK_CFDATA_ARRAY_CALLBACK)
https://bugs.webkit.org/show_bug.cgi?id=75675
Summary WebKit1 fails to compile with USE(CFNETWORK) and HAVE(NETWORK_CFDATA_ARRAY_CA...
Pratik Solanki
Reported 2012-01-05 17:15:39 PST
Compiling Webkit1 with those two flags set to 1 in Platform.h gives warnings and linker errors on Mac.
Attachments
Patch (2.85 KB, patch)
2012-01-05 17:17 PST, Pratik Solanki
no flags
Pratik Solanki
Comment 1 2012-01-05 17:17:52 PST
WebKit Review Bot
Comment 2 2012-01-06 12:23:10 PST
Comment on attachment 121374 [details] Patch Clearing flags on attachment: 121374 Committed r104320: <http://trac.webkit.org/changeset/104320>
WebKit Review Bot
Comment 3 2012-01-06 12:23:14 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.