WebKit1 fails to compile with USE(CFNETWORK) and HAVE(NETWORK_CFDATA_ARRAY_CALLBACK) https://bugs.webkit.org/show_bug.cgi?id=75675

Reviewed by Oliver Hunt.

* platform/network/cf/ResourceHandleCFNet.cpp:
(WebCore::willCacheResponse):


Canonical link: https://commits.webkit.org/92529@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104320 268f45cc-cd09-0410-ab3c-d52691b4dbfc